2009-03-11  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (soup_session_cancel_message): add more
	detail to the doc comment

	* libsoup/soup-message.c (SoupMessage): Note in the doc comment
	that reason phrases are not very useful, and should not be
	presented to the user.

	* libsoup/soup-status.c: add a comment explaining why reason
	phrases aren't localized. Also some misc doc fixes.
	(soup_status_get_phrase): Note in the doc comment that you
	shouldn't present reason phrases to the user.

2009-03-09  Dan Winship  <danw@gnome.org>

	Bug 571527 – gvfsd-http crashed with SIGSEGV in
	g_hash_table_lookup().

	As currently written, libproxy's gnome plugin causes intermittent
	gvfsd-http crashes, and I didn't have time to come up with either
	a fix or a workaround. So for 2.26.0 we will fall back to using
	the GConf-based proxy resolver. Hopefully to be fixed for 2.26.1.

	* configure.in: require both gconf and libproxy if building
	--with-gnome

	* libsoup/soup-proxy-resolver-gconf.c: bring this back.

	* libsoup/soup-gnome-features.c
	(soup_proxy_resolver_gnome_get_type): use gconf instead of
	libproxy

	* libsoup/Makefile.am: updates

2009-03-08  Dan Winship  <danw@gnome.org>

	* libsoup/*.c: gtk-doc updates. In particular, document a bunch of
	convenience #defines, and add "Since" tags where appropriate.

2009-03-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session-async.c (run_queue): Process messages in
	the CONNECTING iostate before messages in the QUEUED iostate.
	Otherwise, if a bunch of messages are queued all at once, and the
	server doesn't support persistent connections, some messages can
	get stranded in the queue. Fixes #574365 (reported by Xan Lopez)
	and removes a five-year-old FIXME...

2009-02-20  Gustavo Noronha Silva  <gns@gnome.org>

	* libsoup/soup-message-headers.c
	(soup_message_headers_get_content_type): now returns NULL if there
	is no Content-Type header; fix documentation to account for this