@@ -8,6 +8,8 @@
 
 #include <libsoup/soup-cookie-jar.h>
 
+G_BEGIN_DECLS
+
 #define SOUP_TYPE_COOKIE_JAR_SQLITE            (soup_cookie_jar_sqlite_get_type ())
 #define SOUP_COOKIE_JAR_SQLITE(obj)            (G_TYPE_CHECK_INSTANCE_CAST ((obj), SOUP_TYPE_COOKIE_JAR_SQLITE, SoupCookieJarSqlite))
 #define SOUP_COOKIE_JAR_SQLITE_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST ((klass), SOUP_TYPE_COOKIE_JAR_SQLITE, SoupCookieJarSqliteClass))
@@ -35,6 +37,8 @@ typedef struct {
 GType soup_cookie_jar_sqlite_get_type (void);
 
 SoupCookieJar *soup_cookie_jar_sqlite_new (const char *filename,
-					 gboolean    read_only);
+					   gboolean    read_only);
+
+G_END_DECLS
 
 #endif /* SOUP_COOKIE_JAR_SQLITE_H */
